--- a/editall.css
+++ b/editall.css
@@ -3,11 +3,11 @@
 /* ===================== */
 
 body {
-	background-image: url(images/MAas_Composition_Background.png);
-	background-repeat: no-repeat;
-	background-size: 100% auto;
+    background-image: url(images/MAas_Composition_Background.png);
+    background-repeat: no-repeat;
+    background-size: 100% auto;
     background-color: #144A52;
-	overflow-x: hidden;
+    overflow-x: hidden;
 }
         ::-webkit-scrollbar{
             width: 0.7vw;
@@ -23,20 +23,20 @@ body {
         ::-webkit-scrollbar-thumb:hover{
         background: #155152; 
         }
-.topnav {
-	background-color: #142024;
-	margin-top: -38px;
-	margin-left: -10px;
-	width: 105%;
-	font-size: 25px;
-	height: 50%;
-	color: white;
-	text-decoration: none;
-	text-shadow: 2px 2px 8px grey;
-	overflow: hidden;
-	display: block;
+.topNav {
+    background-color: #142024;
+    margin-top: -38px;
+    margin-left: -10px;
+    width: 105%;
+    font-size: 25px;
+    height: 50%;
+    color: white;
+    text-decoration: none;
+    text-shadow: 2px 2px 8px grey;
+    overflow: hidden;
+    display: block;
 }
-        .topnav a, span{ 
+        .topNav a, span{ 
             float: left;
             display: block;
             color: #f2f2f2;
@@ -46,18 +46,18 @@ body {
             font-size: 20px;
             margin-left: auto;
         }
-        .topnav a:hover {
+        .topNav a:hover {
             background-color: #ddd;
             color: black;
         }
-        .topnav a.active {
+        .topNav a.active {
             background-color: #04AA6D;
             color: white;
         }
-        .topnav .icon {
+        .topNav .icon {
             display: none;
         }
-.sidenav {
+.sideNav {
     height: 99%;
     width: 0%;
     position: fixed;
@@ -72,7 +72,7 @@ body {
     overflow-y: auto;
     z-index: 3;
 }
-        .sidenav a {
+        .sideNav a {
             padding: 8px 8px 40px 32px; /* Top, Right, Bottom, Left */
             text-decoration: none;
             font-size: 25px;
@@ -82,38 +82,38 @@ body {
             text-shadow: 3px 3px 8px black;
             color: white;
         }
-        .sidenav a:hover {
+        .sideNav a:hover {
             color: #042324;
         }
         a:hover {
             color: #424242;
         }
-        .sidenav .closebtn {
+        .sideNav .closeBtn {
             position: absolute;
             top: 0;
             left: -5%;
             font-size: 50px;
             color: white;
         }
-        #home-btn {
+        #homeBtn {
             max-height: 40px;
             position: absolute;
             right: 5%;
             top: 3%;
             filter: invert(92%);
         }
-        #home-btn:hover {
+        #homeBtn:hover {
             filter: invert(5%);
         }
-        #song-menu {
+        #songMenu {
             text-decoration: none;
             list-style-type: none;
             margin-left: -20%;
         }
-        #song-menu li:last-child {
+        #songMenu li:last-child {
             padding-bottom: 40px;
         }
-        #search-input {
+        #searchInput {
             width: 80%;
             font-size: 18px;
             padding: 11px;
@@ -121,7 +121,7 @@ body {
             border-radius: 5px;
             margin-left: 5%;
         }
-        #nav-link{
+        #navLink{
             color: white;
             text-decoration: none;
             text-shadow: 2px 2px 8px grey;
@@ -137,36 +137,36 @@ body[data-device="Tablet/iPad"] {
     body[data-device="Tablet/iPad"] ::-webkit-scrollbar {
         width: 0.6vw; /* Slightly narrower scrollbar */
     }
-body[data-device="Tablet/iPad"] .topnav {
+body[data-device="Tablet/iPad"] .topNav {
     margin-top: -30px; /* Reduced margin */
     margin-left: -8px;
     width: 102%; /* Slightly narrower */
     font-size: 22px; /* Smaller font */
     height: 45%; /* Reduced height */
 }
-body[data-device="Tablet/iPad"] .topnav a, body[data-device="Tablet/iPad"] .topnav span {
+body[data-device="Tablet/iPad"] .topNav a, body[data-device="Tablet/iPad"] .topNav span {
     padding: 12px 14px; /* Reduced padding */
     font-size: 18px; /* Smaller font */
 }
-body[data-device="Tablet/iPad"] .sidenav {
+body[data-device="Tablet/iPad"] .sideNav {
     padding-top: 50px; /* Reduced padding */
 }
-    body[data-device="Tablet/iPad"] .sidenav a {
+    body[data-device="Tablet/iPad"] .sideNav a {
         padding: 6px 6px 30px 28px; /* Reduced padding */
         font-size: 22px; /* Smaller font */
     }
-    body[data-device="Tablet/iPad"] .sidenav .closebtn {
+    body[data-device="Tablet/iPad"] .sideNav .closeBtn {
         font-size: 45px; /* Smaller close button */
     }
-    body[data-device="Tablet/iPad"] #home-btn {
+    body[data-device="Tablet/iPad"] #homeBtn {
         max-height: 35px; /* Smaller button */
         right: 4%;
         top: 2.5%;
     }
-    body[data-device="Tablet/iPad"] #song-menu {
+    body[data-device="Tablet/iPad"] #songMenu {
         margin-left: -15%; /* Adjusted margin */
     }
-    body[data-device="Tablet/iPad"] #search-input {
+    body[data-device="Tablet/iPad"] #searchInput {
         width: 85%; /* Wider input */
         font-size: 16px; /* Smaller font */
         padding: 10px;
@@ -184,30 +184,30 @@ body[data-device="Phone"] {
     body[data-device="Phone"] ::-webkit-scrollbar {
         width: 2vw; /* Thicker for touch */
     }
-body[data-device="Phone"] .sidenav {
+body[data-device="Phone"] .sideNav {
     padding-top: 40px; /* Reduced padding */
     height: 100%; /* Full height */
 }
-    body[data-device="Phone"] .sidenav a {
+    body[data-device="Phone"] .sideNav a {
         padding: 10px 10px 25px 20px; /* Adjusted for touch */
         font-size: 20px; /* Larger for readability */
     }
-    body[data-device="Phone"] .sidenav .closebtn {
+    body[data-device="Phone"] .sideNav .closeBtn {
         font-size: 40px; /* Smaller close button */
         left: 0; /* Adjust position */
     }
-    body[data-device="Phone"] #home-btn {
+    body[data-device="Phone"] #homeBtn {
         max-height: 30px; /* Smaller button */
         right: 7%;
         top: 2%;
     }
-    body[data-device="Phone"] #song-menu {
+    body[data-device="Phone"] #songMenu {
         margin-left: -10%; /* Adjusted margin */
     }
-    body[data-device="Phone"] #song-menu li:last-child {
+    body[data-device="Phone"] #songMenu li:last-child {
         padding-bottom: 40px; /* Reduced bottom padding */
     }
-    body[data-device="Phone"] #search-input {
+    body[data-device="Phone"] #searchInput {
         width: 84%; /* Near-full width */
         font-size: 16px; /* Readable size */
         padding: 12px; /* Larger padding for touch */
