--- a/index.css
+++ b/index.css
@@ -67,14 +67,14 @@
         letter-spacing: 2px;
         font-size: 2vw;
         margin-left: 1%;
-        text-shadow: 0px 0px 20px rgb(255, 255, 255);
+        text-shadow: 0px 0px 20px rgb(255, 255, 255, 0.7);
     }
     .songCovers {
         display: grid;
         overflow-y: hidden;
-        grid-template-columns: 20% 30% 20% 30%;
+        grid-template-columns: 1fr 2fr 1fr 2fr;
         grid-template-rows: repeat(3, 1fr);
-        row-gap: 20px;
+        gap: 20px;
         align-items: start;
         overflow: visible;
     }
@@ -84,7 +84,8 @@
         text-decoration: none;
         align-self: start;
         margin-top: 0;
-        text-shadow: 0px 0px 50px rgb(255, 255, 255);
+        margin-left: 0;
+        text-shadow: 0px 0px 50px rgb(255, 255, 255, 0.5);
     }
     #featuredSong span {
         font-size: 1.2vw;
@@ -94,7 +95,7 @@
         text-align: justify;
         text-indent: 20px;
         padding-right: 30px;
-        text-shadow: 0px 0px 0px rgb(255, 255, 255);
+        text-shadow: 0px 0px 0px rgb(255, 255, 255, 0.2);
     }
     #featuredSong img {
         width: 100%;
@@ -114,29 +115,30 @@
 /* ===================== */
 
 body[data-device="Tablet/iPad"] .main {
-        grid-template-columns: repeat(8, minmax(150px, 1fr));
-        overflow-x: auto;
         scroll-behavior: smooth;
-        scroll-snap-type: x mandatory;
+        grid-template-columns: 1fr 1fr 1fr; 
 }
     body[data-device="Tablet/iPad"] #mainHeader {
-        padding: 6% 15% 7% 15%; /* Reduced padding */
+        padding-left: 15%;
+    }
+    body[data-device="Tablet/iPad"] h1 {
+        font-size: 6rem;
     }
     body[data-device="Tablet/iPad"] .subtext {
-        width: 85%; /* Reduced width */
+        width: 100%; /* Reduced width */
     }
 body[data-device="Tablet/iPad"] #imageContainer {
-    margin: 6% 0; /* Adjusted margins */
+    margin: 6% 5% 0;
     width: 70%; /* Slightly larger */
 }
 body[data-device="Tablet/iPad"] .featuredSongsBox {
     width: 90%; /* Slightly wider */
 }
-    body[data-device="Tablet/iPad"] .songCovers {
-        display: o;
-    }
     body[data-device="Tablet/iPad"] #featuredSong img {
         max-width: 150px; /* Smaller max-width */
+    }
+    body[data-device="Tablet/iPad"] .songCovers {
+        column-gap: 0px;
     }
     body[data-device="Phone"] #featuredSong p {
         font-size: 3.5vw;
