--- a/lyrics.css
+++ b/lyrics.css
@@ -23,6 +23,7 @@
     }
 .song {
     display: flex;
+    align-items: flex-start;
 }
     #mainLyrics {
         background: rgba(255, 255, 255, 0.15);
@@ -44,7 +45,7 @@
         box-shadow: 0 8px 32px 0 rgba(91, 91, 91, 0.37);
         border-radius: 50px;
         width: 500px;
-        height: 350px;
+        height: auto;
         margin: 3% 5% 3% 0;
         padding: 2%;
     }
@@ -81,16 +82,15 @@
     }
     #progressBar {
         width: 95%;
-        margin-bottom: 10px; /* Space below the bar */
+        margin-bottom: 10px;
     }
     .timeContainer {
+        width: 95%;
         display: flex;
         justify-content: space-between;
-        width: 95%;
-        margin-bottom: 10px; /* Space below the times */
+        align-items: center;
     }
     #currentTime {
-		justify-self: start;
         border: 2px solid black;
         font-size: 1vw;
     }
@@ -98,31 +98,12 @@
         border: 2px solid black;
         font-size: 1vw;
     }
-    .controls {
-        display: flex;
-        justify-content: space-between;
-        width: 95%;
-    }
-    #reset {
-        justify-self: start; /* Align to the left within controls */
-        cursor: pointer;
-        font-size: 1.5vw;
-        color: black;
-        background-color: transparent;
-        border: none;
-    }
     #playPauseButton {
         cursor: pointer;
-        font-size: 45px;
+        font-size: 2vw;
         color: black;
         background-color: transparent;
         border: none;
-        place-self: center;
-    }
-    .audioPlayer a {
-        justify-self: end; /* Align to the right within controls */
-        font-size: 1.5vw;
-        color: black;
     }
     audio {
         display: none;
@@ -146,6 +127,7 @@ body[data-device="Tablet/iPad"] .title {
     }
 body[data-device="Tablet/iPad"] .song {
     display: flex; /* Keep flex but adjust sizes */
+    align-items: flex-start;
 }
     body[data-device="Tablet/iPad"] #mainLyrics {
         width: 55%; /* Slightly wider */
